<resources>
    <string name="app_name">108590002_HW6_04.3</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="textIntro">Droid Dessert</string>
    <string name="donut">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order">You ordered a donut.</string>
    <string name="ice_cream_order">You ordered an ice cream.</string>
    <string name="froyo_order">You ordered a froyo.</string>

    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="phone">Phone:</string>
    <string name="note">Note:</string>
    <string name="edit_name">Enter your name </string>
    <string name="edit_address">Enter your address</string>
    <string name="edit_phone">Enter your phone</string>
    <string name="edit_note">Enter your note</string>
    <string name="delivery_method">Choose a delivery method:</string>
    <string name="sameday">Same day messenger service.</string>
    <string name="nextday">Next day ground delivery.</string>
    <string name="pickup">Pick up</string>
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
    <string name="date">Date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
</resources>