<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <TextView
        android:id="@+id/order_textView"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:text="Order:"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_textView" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/address"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/phone"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <TextView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/note"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="190dp"
        android:layout_height="45dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:ems="10"
        android:hint="@string/edit_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/name"
        app:layout_constraintStart_toEndOf="@+id/name"
        app:layout_constraintTop_toTopOf="@+id/name" />

    <EditText
        android:id="@+id/edit_address"
        android:layout_width="190dp"
        android:layout_height="45dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:ems="10"
        android:hint="@string/edit_address"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="@+id/address"
        app:layout_constraintStart_toEndOf="@+id/address"
        app:layout_constraintTop_toTopOf="@+id/address"
        app:layout_constraintVertical_bias="0.461" />

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="190dp"
        android:layout_height="45dp"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:ems="10"
        android:hint="@string/edit_phone"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="@+id/phone"
        app:layout_constraintStart_toEndOf="@+id/phone"
        app:layout_constraintTop_toTopOf="@+id/phone" />

    <EditText
        android:id="@+id/edit_note"
        android:layout_width="190dp"
        android:layout_height="45dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:ems="10"
        android:hint="@string/edit_note"
        android:inputType="textMultiLine|textCapSentences"
        app:layout_constraintBottom_toBottomOf="@+id/note"
        app:layout_constraintStart_toEndOf="@+id/note"
        app:layout_constraintTop_toTopOf="@+id/note"
        app:layout_constraintVertical_bias="0.461" />

    <TextView
        android:id="@+id/delivery_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="370dp"
        android:text="@string/delivery_method"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:layout_width="338dp"
        android:layout_height="141dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="215dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/sameday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onChecked"
            android:text="@string/sameday" />

        <RadioButton
            android:id="@+id/nextday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onChecked"
            android:text="@string/nextday" />

        <RadioButton
            android:id="@+id/pickup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onChecked"
            android:text="@string/pickup" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="120dp"
        android:layout_height="44dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="23dp"
        app:layout_constraintStart_toEndOf="@+id/edit_phone"
        app:layout_constraintTop_toBottomOf="@+id/edit_address" />

    <Button
        android:id="@+id/date"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginBottom="150dp"
        android:backgroundTint="@color/teal_200"
        android:onClick="showDate"
        android:text="@string/date"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
